--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,15 +35,15 @@
     color:white;
 }
 
-.brand-logo{
+nav .brand-logo {
     position: absolute;
     color: #fff;
     display: inline-block;
-    font-size: 2.1rem;
+    font-size: 1.1rem;
     font-style: normal;
     font-weight: 100;
     padding: 0;
-    letter-spacing: 7px;
+    letter-spacing: 2px;
 }
 
 .text_h2 {font-weight: 100;margin-bottom: 4%; line-height: 4.5rem;}
