--- a/src/templates/navigation.jade
+++ b/src/templates/navigation.jade
@@ -15,7 +15,7 @@ mixin navigation()
     .container
       +navigation()
         li
-          a(href='#intro') Hallo
+          a(href='#intro') Hej
         li
           a(href='#work') Angebot
         li
