--- a/src/templates/default.jade
+++ b/src/templates/default.jade
@@ -1,22 +1,6 @@
-doctype html
-html(lang='en')
-  head
-    meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0')
-    title Musik- & Kunstschule Wilhelm
-    // CSS
-    link(href='css/materialize.css', type='text/css', rel='stylesheet', media='screen,projection')
-    link(href='css/styles.css', type='text/css', rel='stylesheet', media='screen,projection')
-  body#top.scrollspy
-    // Pre Loader
-    #loader-wrapper
-      #loader
-      .loader-section.section-left
-      .loader-section.section-right
+extends base
 
-    // Navigation
-    include navigation
-
+block main
     // Hero
     include block1
 
@@ -31,9 +15,3 @@ html(lang='en')
 
     // Lehrer
     include block5
-
-    // Footer
-    include footer
-
-    script(src='js/vendor.js')
-    script(src='js/init.js')
