--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -48,7 +48,7 @@ nav .brand-logo {
 
 .text_h2 {font-weight: 100;margin-bottom: 4%; line-height: 4.5rem;}
 
-.span_h2 {font-weight: 300;color: #2196F3;}
+h2 span {font-weight: 300;color: #2196F3;}
 
 .text_b{color: #2196F3;}
 
