--- a/src/templates/block1.jade
+++ b/src/templates/block1.jade
@@ -1,8 +1,14 @@
+- $ = locals.contents.zitate
+
+mixin letterRorws(quotations)
+    span.cd-words-wrapper.waiting
+    b.is-visible=quotations[0]
+    - rest = quotations.splice(1)
+    each item in rest
+        b=item
+
 #index-banner.section.no-pad-bot
-  .container
-    h1.text_h.center.header.cd-headline.letters.type
-      span
-      span.cd-words-wrapper.waiting
-        b.is-visible Wo die Sprache aufhört, fängt Musik an
-        b Ohne Musik wäre das Leben ein Irrtum
-        b Musik ist die Liebe auf der Suche nach einem Wort
+    .container
+        h1.text_h.center.header.cd-headline.letters.type
+            span
+            +letterRorws($)
