--- a/src/templates/block2.jade
+++ b/src/templates/block2.jade
@@ -6,7 +6,7 @@ mixin row(parts)
         h5.promo-caption=part.headline
         p.light.center=part.text
 
-- $ = locals.contents.wissenswertes
+- $ = locals.contents.intro
 #intro.section.scrollspy
   .container
     h2.header.text_b=$.headline
