--- a/src/templates/block3.jade
+++ b/src/templates/block3.jade
@@ -17,7 +17,7 @@ mixin createCards(cards, more)
           p=card.details
 
 - $ = locals.contents.angebot
-#work.section.scrollspy
+#unterricht.section.scrollspy
   .container
     h2.header.text_b=$.headline
     .row
