--- a/src/templates/block5.jade
+++ b/src/templates/block5.jade
@@ -13,7 +13,7 @@ mixin createCards(teachers)
                 a.red-text.text-darken-1(href=teacher.link)=teacher.details
 
 - $ = locals.contents.lehrer
-#team.section.scrollspy
+#lehrer.section.scrollspy
   .container
     h2.header.text_b=$.headline
     .row
