--- a/src/templates/default.jade
+++ b/src/templates/default.jade
@@ -7,7 +7,7 @@ block main
     // Intro and service
     include block2
 
-    // Work
+    // Angebot
     include block3
 
     // Parallax divider
