--- a/src/templates/footer.jade
+++ b/src/templates/footer.jade
@@ -1,4 +1,4 @@
-footer#contact.page-footer.default_color.scrollspy
+footer#kontakt.page-footer.default_color.scrollspy
   .container
     .row
       .col.l6.s12
