--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -76,6 +76,21 @@ nav ul a {
     padding: 0px 15px;
 }
 
+.side-nav .subItem {
+    padding-left: 30px;
+}
+
+.side-nav span.a {
+    color: #444;
+    display: block;
+    font-size: 1rem;
+    height: 64px;
+    line-height: 64px;
+    font-weight: 300;
+    padding: 0 15px;
+    letter-spacing: 2px;
+}
+
 .cd-headline.type .cd-words-wrapper {
     vertical-align: top;
     overflow: hidden;
